--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 		</header>
 		<main class="projetos">
 			<ul>Projetos</ul>
-			<li type="none"><a href="https://codepen.io/nicoledalapola/pen/jOajwpP" target="_blank">🔢 Calculadora de Média</a></li>
-			<li type="none"><a href="https://codepen.io/nicoledalapola/pen/eYymGPy" target="_blank">💱 Conversror de Moedas</a></li>
-			<li type="none"><a href="https://codepen.io/nicoledalapola/pen/BaJywmy" target="_blank">🔮 Mentalista</a></li>
-			<li type="none"><a href="https://codepen.io/nicoledalapola/pen/PoEwayw" target="_blank">🎬 Aluraflix</a></li>
-			<li type="none"><a href="https://codepen.io/nicoledalapola/pen/JjMdvVW" target="_blank">🏆 Tabela de Classificação</a></li>
-			<li type="none"><a href="https://codepen.io/nicoledalapola/pen/MWraGyP" target="_blank">🃏 Super Trunfo Star Wars</a></li>
+			<li><a href="https://codepen.io/nicoledalapola/pen/jOajwpP" target="_blank">🔢 Calculadora de Média</a></li>
+			<li><a href="https://codepen.io/nicoledalapola/pen/eYymGPy" target="_blank">💱 Conversror de Moedas</a></li>
+			<li><a href="https://codepen.io/nicoledalapola/pen/BaJywmy" target="_blank">🔮 Mentalista</a></li>
+			<li><a href="https://codepen.io/nicoledalapola/pen/PoEwayw" target="_blank">🎬 Aluraflix</a></li>
+			<li><a href="https://codepen.io/nicoledalapola/pen/JjMdvVW" target="_blank">🏆 Tabela de Classificação</a></li>
+			<li><a href="https://codepen.io/nicoledalapola/pen/MWraGyP" target="_blank">🃏 Super Trunfo Star Wars</a></li>
 		</main>
 	</div>
 </body>
